cmake_minimum_required(VERSION 3.13)
project(MinimalnyProjekt VERSION 1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Definicja opcji. Domyślnie jest wyłączona (OFF).
# Użytkownik może ją włączyć, wpisując: -DOPTIMIZE_SIZE=ON
option(OPTIMIZE_SIZE "Włącz agresywną optymalizację rozmiaru pliku wykonywalnego" ON)

add_executable(program main.cpp)

# Sprawdzamy, czy użytkownik włączył opcję OPTIMIZE_SIZE
if(OPTIMIZE_SIZE)
    message(STATUS ">>> Agresywna optymalizacja rozmiaru: WŁĄCZONA <<<")

    # 1. Włączenie LTO / IPO (globalna optymalizacja linkera)
    include(CheckIPOSupported)
    check_ipo_supported(RESULT ipo_supported)
    if(ipo_supported)
        set_property(TARGET program PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
    endif()

    # 2. Flagi dla GCC / Clang
    if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
        target_compile_options(program PRIVATE -ffunction-sections -fdata-sections -fno-exceptions -fno-rtti)
        target_link_options(program PRIVATE -Wl,--gc-sections -s)

    # 3. Flagi dla MSVC (Windows)
    elseif(MSVC)
        target_compile_options(program PRIVATE /GR- /EHs-c-)
        target_link_options(program PRIVATE /OPT:REF /OPT:ICF)
    endif()
else()
    message(STATUS ">>> Agresywna optymalizacja rozmiaru: WYŁĄCZONA (Standardowe budowanie) <<<")
endif()

if(MSVC OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    if(WIN32)
        target_link_libraries(program PRIVATE kernel32)
        # Wyłączenie ochrony przed przepełnieniem bufora (usuwa zależność od __security_cookie)
        target_compile_options(program PRIVATE "/GS-")
        # 1. Definiujemy własny punkt wejścia (odcinamy CRT)
        target_link_options(program PRIVATE "/ENTRY:main")
        
        # 2. Informujemy, że nie chcemy linkować domyślnych bibliotek uruchomieniowych
        target_link_options(program PRIVATE "/NODEFAULTLIB")
        
        # 3. Dodatkowe agresywne flagi optymalizacji sekcji pliku PE (Windows)
        target_link_options(program PRIVATE "/ALIGN:512") # Zmniejsza wyrównanie sekcji w pliku

        # Łączymy sekcję danych tylko do odczytu z sekcją kodu w jeden blok
        target_link_options(program PRIVATE "/MERGE:.rdata=.text")
    endif()
endif()